채팅방 그룹화, 배경이미지 사이즈 변경

--- a/django/class_room/templates/class_room/base.html
+++ b/django/class_room/templates/class_room/base.html
@@ -87,7 +87,7 @@
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="{% static 'images/chat.png' %}" />
-                <a class="waves-effect" href="http://127.0.0.1:3000/{{ user.name }}/{{ group.name }}">채팅</a>
+                <a class="waves-effect" href="http://layer7.kr:3000/{{ user.name }}/{{ group.name }}">채팅</a>
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px;" src="{% static 'images/setting.png' %}" />
