--- a/django/class_room/templates/class_room/mygroup.html
+++ b/django/class_room/templates/class_room/mygroup.html
@@ -18,7 +18,7 @@
                         <span style="color: #5b5a5b; font-size: 30px;">{{ i.title }}</span>
                     </div>
 
-                    <div id="text" style="hetigh: 30px; width: 600px; overflow: scroll;">
+                    <div id="text" style="hetigh: 30px; width: 600px; overflow: hidden;">
                         <span style="color: #e0e0e0; font-size: 20px;">{{ i.author.name }}</span>
                     </div>
 
@@ -44,7 +44,7 @@
                         <div id="writer">
                             <span style="color: grey; font-size: 15px;">{{ j.writer.name }}</span>
                         </div>
-                        <div id="text" style="hetigh: 30px; width: 600px; overflow: scroll;">
+                        <div id="text" style="hetigh: 30px; width: 600px; overflow: hidden;">
                             <span style="color: grey; font-size: 20px;">{{ j.text }}</span>
                         </div>
                     </div>
