--- a/django/class_room/templates/class_room/base.html
+++ b/django/class_room/templates/class_room/base.html
@@ -42,6 +42,10 @@
                 border-bottom: 1px solid #673fb4;
                 box-shadow: 0 1px 0 0 #000;
             }
+
+            #x:hover {
+                cursor: pointer;
+            }
         </style>
 
     </head>
