--- a/django/class_room/templates/class_room/new_post.html
+++ b/django/class_room/templates/class_room/new_post.html
@@ -9,7 +9,7 @@
             <!-- <input type="text" style="color: #5b5a5b; width: 300px; font-size: 30px;" name="title" placeholder="제목을 입력하세요."><br> -->
             <div class="row">
                 <div class="input-field col s5">
-                    <input style="font-size: 30px;" id="title" type="text" name="title" class="validate">
+                    <input style="font-size: 30px;" id="title" type="text" name="title" class="validate" required>
                     <label for="title">제목</label>
                 </div>
             </div>
@@ -17,7 +17,7 @@
             <br><br>
             <div class="row">
                 <div class="input-field col s12">
-                    <textarea id="textarea1" form="post-form" name="text" class="materialize-textarea"></textarea>
+                    <textarea id="textarea1" form="post-form" name="text" class="materialize-textarea" required></textarea>
                     <label for="textarea1">본문</label>
                 </div>
             </div>
