--- a/django/class_room/templates/class_room/setting_group.html
+++ b/django/class_room/templates/class_room/setting_group.html
@@ -32,8 +32,7 @@
 
                 <div class="row" style="margin-left: 200px;">
                     <div class="input-field col s8">
-                        <input id="intro" type="text" class="validate" name="introduce" maxlength="20">
-                        <label for="intro">자기소개</label>
+                        <input id="intro" type="text" class="validate" name="introduce" maxlength="20" placeholder="상태 메세지">
                     </div>
                 </div>
 
