배경이미지 확장자 변

--- a/django/class_room/templates/class_room/make_group.html
+++ b/django/class_room/templates/class_room/make_group.html
@@ -89,10 +89,10 @@
             function setBackground() {
                 randomInt = Math.floor( (Math.random() * (3 - 0 + 1)) + 0 );
 
-                data = [`url("{% static 'images/background1.png' %}") no-repeat center center fixed`,
-                        `url("{% static 'images/background2.png' %}") no-repeat center center fixed`,
-                        `url("{% static 'images/background3.png' %}") no-repeat center center fixed`,
-                        `url("{% static 'images/background4.png' %}") no-repeat center center fixed`,
+                data = [`url("{% static 'images/background1.jpg' %}") no-repeat center center fixed`,
+                        `url("{% static 'images/background2.jpg' %}") no-repeat center center fixed`,
+                        `url("{% static 'images/background3.jpg' %}") no-repeat center center fixed`,
+                        `url("{% static 'images/background4.jpg' %}") no-repeat center center fixed`,
                     ];
 
                 $('html').css('background', data[randomInt]);
